// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple toolbar with single group 1`] = `
.pf-c-toolbar__action-group {
  display: none;
  align-items: center;
}
.pf-c-toolbar {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem 2rem 1rem 2rem;
  align-items: center;
}

<Toolbar
  className={null}
>
  <div
    className="pf-c-toolbar"
  >
    <ToolbarGroup
      className={null}
    >
      <div
        className="pf-c-toolbar__action-group"
      >
        <ToolbarItem
          className={null}
        >
          <div>
            Item 1
          </div>
        </ToolbarItem>
        <ToolbarItem
          className={null}
        >
          <div>
            Item 2
          </div>
        </ToolbarItem>
      </div>
    </ToolbarGroup>
  </div>
</Toolbar>
`;

exports[`Toolbar with multiple groups 1`] = `
.pf-c-toolbar__action-group {
  display: none;
  align-items: center;
}
.pf-c-toolbar__action-group {
  display: none;
  align-items: center;
}
.pf-c-toolbar__action-group {
  display: none;
  align-items: center;
}
.pf-c-toolbar {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem 2rem 1rem 2rem;
  align-items: center;
}

<Toolbar
  className={null}
>
  <div
    className="pf-c-toolbar"
  >
    <ToolbarGroup
      className={null}
    >
      <div
        className="pf-c-toolbar__action-group"
      >
        <ToolbarItem
          className={null}
        >
          <div>
            Item 1
          </div>
        </ToolbarItem>
        <ToolbarItem
          className={null}
        >
          <div>
            Item 2
          </div>
        </ToolbarItem>
      </div>
    </ToolbarGroup>
    <ToolbarGroup
      className={null}
    >
      <div
        className="pf-c-toolbar__action-group"
      >
        <ToolbarItem
          className={null}
        >
          <div>
            Item 3
          </div>
        </ToolbarItem>
      </div>
    </ToolbarGroup>
    <ToolbarGroup
      className={null}
    >
      <div
        className="pf-c-toolbar__action-group"
      >
        <ToolbarItem
          className={null}
        >
          <div>
            Item 4
          </div>
        </ToolbarItem>
        <ToolbarItem
          className={null}
        >
          <div>
            Item 5
          </div>
        </ToolbarItem>
        <ToolbarItem
          className={null}
        >
          <div>
            Item 6
          </div>
        </ToolbarItem>
      </div>
    </ToolbarGroup>
  </div>
</Toolbar>
`;

exports[`Toolbar with sections 1`] = `
.pf-c-toolbar__action-group {
  display: none;
  align-items: center;
}
.pf-c-toolbar__action-group {
  display: none;
  align-items: center;
}
.pf-c-toolbar__total-items {
  display: block;
  margin-left: auto;
  font-size: 0.875rem;
}
.pf-c-toolbar__action-group {
  display: none;
  align-items: center;
}
.pf-c-toolbar__total-items {
  display: block;
  margin-left: auto;
  font-size: 0.875rem;
}
.pf-c-toolbar {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem 2rem 1rem 2rem;
  align-items: center;
}

<Toolbar
  className={null}
>
  <div
    className="pf-c-toolbar"
  >
    <ToolbarSection
      aria-label="First section"
      className={null}
    >
      <div
        aria-label="First section"
        className="pf-c-toolbar__total-items"
      >
        <ToolbarGroup
          className={null}
        >
          <div
            className="pf-c-toolbar__action-group"
          >
            <ToolbarItem
              className={null}
            >
              <div>
                Item 1
              </div>
            </ToolbarItem>
            <ToolbarItem
              className={null}
            >
              <div>
                Item 2
              </div>
            </ToolbarItem>
          </div>
        </ToolbarGroup>
        <ToolbarGroup
          className={null}
        >
          <div
            className="pf-c-toolbar__action-group"
          >
            <ToolbarItem
              className={null}
            >
              <div>
                Item 3
              </div>
            </ToolbarItem>
          </div>
        </ToolbarGroup>
      </div>
    </ToolbarSection>
    <ToolbarSection
      aria-label="Second section"
      className={null}
    >
      <div
        aria-label="Second section"
        className="pf-c-toolbar__total-items"
      >
        <ToolbarGroup
          className={null}
        >
          <div
            className="pf-c-toolbar__action-group"
          >
            <ToolbarItem
              className={null}
            >
              <div>
                Item 4
              </div>
            </ToolbarItem>
            <ToolbarItem
              className={null}
            >
              <div>
                Item 5
              </div>
            </ToolbarItem>
            <ToolbarItem
              className={null}
            >
              <div>
                Item 6
              </div>
            </ToolbarItem>
          </div>
        </ToolbarGroup>
      </div>
    </ToolbarSection>
  </div>
</Toolbar>
`;
